header corrigido + cards da contato.html terminado

--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -17,7 +17,6 @@
       <a href="../paginas/index.php" id="logo"
         ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
       /></a>
-      <h1>EGÍPCIA</h1>
       <nav>
         <ul class="lista-nav">
             <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
@@ -235,7 +234,7 @@
         <img src="../../../back/imagens/LYJEK(1).png" alt="">
         <div>
           <a href="#">Política de privacidade</a>
-          <a href="#">Contato</a>
+          <a href="../paginas/footer/contato.html">Contato</a>
           <a href="#">Sobre</a>
         </div>
         <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
