--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -2,100 +2,138 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Egípcia | SEPE</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../footer/footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Egípcia | SEPE</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../footer/footer.css">
+
 </head>
 
 <body>
-    <header>
-        <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK-teste.png" alt=""
-                class="logo" /></a>
-        <nav>
-            <ul class="lista-nav">
-                <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
-                <li>
-                    <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
-                    <ul class="dropdown">
-                        <li id="margin-top-dropdown"><a href="../grega.html">Grega</a></li>
-                        <li class="link-dropdown" id="linkEgipcia"><a href="../egipcia.html">Egípcia</a></li>
-                        <li class="link-dropdown" id="linkIrlandesa"><a href="../irlandesa.html">Irlandesa</a></li>
-                        <li class="link-dropdown" id="linkJaponesa"><a href="../japonesa.html">Japonesa</a></li>
-                        <li class="link-dropdown" id="linkHindu"><a href="../hindu.html">Hindu</a></li>
-                        <li id="link-dropdown-excessao"><a href="../mesopotamica.html">Mesopotâmica</a></li>
-                        <li class="link-dropdown" id="linkNordica"><a href="../nordica.html">Nórdica</a></li>
-                        <li class="link-dropdown" id="linkRomana"><a href="../romana.html">Romana</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="superior">
-            <div class="portfolio-card">
-                <img src="../imagens/emili.jpg" alt="Projeto 1">
-                <h2>Emili Spricigo</h2>
-                <p>emilispricigo180@gmail.com</p>
-                <p>Atuou como pesquisadora e roteirista da apresentação. Fazendo a pesquisa e perguntas de cada
-                    mitologia e escolhendo cores para o design do site.</p>
-            </div>
+  <header>
+    <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK-teste.png" alt=""
+        class="logo" /></a>
+    <nav>
+      <ul class="lista-nav">
+        <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
+        <li>
+          <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+          <ul class="dropdown">
+            <li id="margin-top-dropdown"><a href="../grega.html">Grega</a></li>
+            <li class="link-dropdown" id="linkEgipcia"><a href="../egipcia.html">Egípcia</a></li>
+            <li class="link-dropdown" id="linkIrlandesa"><a href="../irlandesa.html">Irlandesa</a></li>
+            <li class="link-dropdown" id="linkJaponesa"><a href="../japonesa.html">Japonesa</a></li>
+            <li class="link-dropdown" id="linkHindu"><a href="../hindu.html">Hindu</a></li>
+            <li id="link-dropdown-excessao"><a href="../mesopotamica.html">Mesopotâmica</a></li>
+            <li class="link-dropdown" id="linkNordica"><a href="../nordica.html">Nórdica</a></li>
+            <li class="link-dropdown" id="linkRomana"><a href="../romana.html">Romana</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="portifolio">
+      <div class="card">
+        <img src="../imagens/emili.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <h2 class="name">Emili Spricigo</h2>
+        <p>emilispricigo180@gmail.com</p>
+        <p class="description">
+          Atuou como pesquisadora e roteirista da apresentação. Fazendo a pesquisa e perguntas de cada mitologia e
+          escolhendo cores para o design do site.
+        </p>
 
-            <div class="portfolio-card">
-                <img src="../imagens/joao.jpg" alt="Projeto 2">
-                <h2>João Victor Portela Rocha</h2>
-                <p>joaovictor239090@gmail.com</p>
-                <p>Atuou como programador usando JavaScript para fazer animações e o quiz. Trabalhou também com PHP e
-                    MySQL para fazer a modelagem, cadastro e registro das pontuações de cada jogador, além disso usou
-                    PHP para fazer uma tabela de ranking dos jogadores do quiz.</p>
-            </div>
+      </div>
 
-            <div class="portfolio-card">
-                <img src="../imagens/kaua.jpg" alt="Projeto 3">
-                <h2>Kauã Martins Barros</h2>
-                <p>martinsbarroskaua@gmail.com</p>
-                <p>Atuou como desenvolvedor front-end usando javascript, HTML e CSS. Foi responsável por fazer o quiz de
-                    algumas mitologias.</p>
-            </div>
+      <div class="card">
+        <img src="../imagens/joao.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <h2 class="name">João Victor Portela Rocha</h2>
+        <p>joaovictor239090@gmail.com</p>
+        <p class="description">
+          Atuou como programador usando JavaScript para fazer animações e o quiz. Trabalhou também com PHP e MySQL para
+          fazer a modelagem, cadastro e registro das pontuações de cada jogador, além disso usou PHP para fazer uma
+          tabela de ranking dos jogadores do quiz.
+        </p>
+        <div class="language-icon">
+          <img src="../imagens/icons/js-logo.png" alt="">
+          <img src="../imagens/icons/php-logo.png" alt="">
+          <img src="../imagens/icons/mysql-logo.png" alt="">
+        </div>
+      </div>
 
-            <div class="portfolio-card">
-                <img src="../imagens/luizE.jpg" alt="Projeto 4">
-                <h2>Luiz Eduardo Cabral da Rosa</h2>
-                <p>luizeduardocabraldarosa@gmail.com</p>
-                <p>Atuou como desenvolvedor front-end fazendo o index estilo carrosel, usando javascript, HTML e CSS.
-                    Escolheu as cores par cada mitologia no carrosel.</p>
-            </div>
-        </div>
-        <div class="inferior">
-            <div class="portfolio-card">
-                <img src="../imagens/luizF.jpg" alt="Projeto 5">
-                <h2>Luiz Fernando Blume Jacinto</h2>
-                <p>luiz.fernando.251107@gmail.com</p>
-                <p>Atuou como desenvolvedor front-end na construção das páginas, usando o conhecimento de Bootstrap,
-                    HTML e CSS construiu a base de conteudo do site. Usou PHP para ajudar a criar o login do usuário e
-                    realizar suporte ao João.</p>
-            </div>
-        </div>
-        <div class="portfolio-card">
-            <img src="../imagens/lucas.jpg" alt="Projeto 6">
-            <h2>Lucas Diniz dos Santos</h2>
-            <p>lucasdiniz1708@gmail.com</p>
-            <p>Atuou como desenvolvedor front-end das páginas do site. Utilizando HTML e CSS. Teve participação na
-                elaboração de perguntas para o quiz.</p>
-        </div>
+      <div class="card">
+        <img src="../imagens/kaua.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <h2 class="name">Kauã Martins Barros</h2>
+        <p>martinsbarroskaua@gmail.com</p>
+        <p class="description">
+          Atuou como desenvolvedor front-end usando javascript, HTML e CSS. Foi responsável por fazer o quiz de algumas
+          mitologias. </p>
+          <div class="language-icon">
+            <img src="../imagens/icons/js-logo.png" alt="">
+            <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+            <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+          </div>
+      </div>
 
-        <div class="portfolio-card">
-            <img src="../imagens/yohana.jpg" alt="Projeto 7">
-            <h2>Yohana Jahn</h2>
-            <p>yohanajahn2@gmail.com</p>
-            <p>Atuou como pesquisadora de conteúdos, fez o layout do site completo, ajudou no front-end a construir
-                as páginas</p>
+      <div class="card">
+        <img src="../imagens/luizE.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <h2 class="name">Luiz Eduardo Cabral da Rosa</h2>
+        <p>luizeduardocabraldarosa@gmail.com</p>
+        <p class="description">
+          Atuou como desenvolvedor front-end fazendo o index estilo carrosel, usando javascript, HTML e CSS. Escolheu as
+          cores par cada mitologia no carrosel.
+        </p>
+        <div class="language-icon">
+          <img src="../imagens/icons/js-logo.png" alt="">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
         </div>
+      </div>
+
+
+      <div class="card">
+        <img src="http://127.0.0.1:5500/front/site/paginas/imagens/luizF.jpg" alt="Foto de Luiz Fernando"
+          class="profile-image">
+        <h2 class="name">Luiz Fernando Blume Jacinto</h2>
+        <p>luiz.fernando.251107@gmail.com</p>
+        <p class="description">
+          Atuou como desenvolvedor front-end na construção das páginas, usando o conhecimento de Bootstrap, HTML e CSS
+          construiu a base de conteúdo do site. Usou PHP para ajudar a criar o login do usuário e realizar suporte ao
+          João.
+        </p>
+        <div class="language-icon">
+          <img src="../imagens/icons/php-logo.png" alt="">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
         </div>
-    </main>
+      </div>
+
+      <div class="card">
+        <img src="../imagens/lucas.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <h2 class="name">Lucas Diniz dos Santos</h2>
+        <p>lucasdiniz1708@gmail.com</p>
+        <p class="description">
+          Atuou como desenvolvedor front-end das páginas do site. Utilizando HTML e CSS. Teve participação na elaboração
+          de perguntas para o quiz.
+        </p>
+        <div class="language-icon">
+          <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
+          <img src="../imagens/icons/CSS3_logo.svg.png" alt="">
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="../imagens/yohana.jpg" alt="Foto de Luiz Fernando" class="profile-image">
+        <h2 class="name">Yohana Jahn</h2>
+        <p>yohanajahn2@gmail.com</p>
+        <p class="description">
+          Atuou como pesquisadora de conteúdos, fez o layout do site completo, ajudou no front-end a construir a
+          estrutura das páginas
+        </p>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
