--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -14,28 +14,25 @@
 
 <body>
   <header>
-    <a href="../paginas/index.php" id="logo"
-    ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
-  /></a>
-    <h1>IRLANDESA</h1>
+    <a href="../paginas/index.php" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo" /></a>
     <nav>
       <ul class="lista-nav">
-          <li id="link-home"><a href="../paginas/index.hphp>HOME</a></li>
-          <li>
-              <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
-              <ul class="dropdown">
-                  <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-                  <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
-                  <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
-                  <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
-                  <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-                  <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
-                  <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
-              </ul>
-          </li>
-          <li id="link-quiz"><a href="../quiz/irlandesa.html">QUIZ IRLANDESA</a></li>
-      </ul>
-  </nav>
+        <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
+        <li>
+            <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+            <ul class="dropdown">
+                <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+                <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.php">Irlandesa</a></li>
+                <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
+                <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
+                <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
+                <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+                <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
+            </ul>
+        </li>
+        <li id="link-quiz"><a href="../quiz/japonesa.html">QUIZ JAPONESA</a></li>
+    </ul>
+    </nav>
   </header>
   <div class="row">
     <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
@@ -160,7 +157,10 @@
         trapos, mas podem também se transformar na mais bela mulher e até mesmo em animais.</p>
 
       <h3>The Dullahan</h3>
-      <p>Um cavaleiro sem cabeça, em seu cavalo preto e sua própria cabeça embaixo de um dos braços. Outro símbolo da morte, quando cavalga até uma vila, traz a certeza de tempos sombrios. Quem se atrever a olhar nos olhos do cavaleiro, será completamente cegado para sempre. Acredita-se que o Dullahan aparece após o pôr-do-sol, em festivais e banquetes.</p>
+      <p>Um cavaleiro sem cabeça, em seu cavalo preto e sua própria cabeça embaixo de um dos braços. Outro símbolo da
+        morte, quando cavalga até uma vila, traz a certeza de tempos sombrios. Quem se atrever a olhar nos olhos do
+        cavaleiro, será completamente cegado para sempre. Acredita-se que o Dullahan aparece após o pôr-do-sol, em
+        festivais e banquetes.</p>
 
 
 
@@ -183,7 +183,7 @@
       <div class="footer-links">
         <ul class="ul-footer">
           <li><a href="../paginas/index.hphp>Página Inicial</a></li>
-          <li><a href="../paginas/egipcia.html">Mitologia Egípcia</a></li>
+          <li><a href=" ../paginas/egipcia.html">Mitologia Egípcia</a></li>
           <li><a href="../paginas/grega.html">Mitologia Grega</a></li>
           <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
           <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
