--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -15,15 +15,14 @@
   <a href="../paginas/index.php" id="logo"
   ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
 /></a>
-  <h1>MITOLOGIA JAPONESA</h1>
   <nav>
     <ul class="lista-nav">
         <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
         <li>
             <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
             <ul class="dropdown">
-                <li id="margin-top-dropdown"><a href="egipcia.php">Egípcia</a></li>
-                <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.php">Irlandesa</a></li>
+                <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+                <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
                 <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
                 <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                 <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
