--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -20,24 +20,23 @@
       <a href="../paginas/index.php" id="logo"
         ><img src="../../../back/imagens/LYJEK.png" alt="" class="logo"
       /></a>
-      <h1>Nórdica</h1>
       <nav>
-        <ul class="lista-nav"
-            <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
-            <li>
-                <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
-                <ul class="dropdown">
-                    <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-                    <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
-                    <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
-                    <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
-                    <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-                    <li class="link-dropdown" id="linkGrecia"><a href="nordica.html">Grega</a></li>
-                    <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
-                </ul>
-            </li>
-            <li id="link-quiz"><a href="../quiz/nordica.html">QUIZ NÓRDICA</a></li>
-        </ul>
+        <ul class="lista-nav">
+          <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
+          <li>
+              <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+              <ul class="dropdown">
+                  <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+                  <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
+                  <li class="link-dropdown" id="linkJaponesa"><a href="greco-romana.html">Japonesa</a></li>
+                  <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
+                  <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
+                  <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+                  <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
+              </ul>
+          </li>
+          <li id="link-quiz"><a href="../quiz/romana.html">QUIZ ROMANA</a></li>
+      </ul>
     </nav>
     </header>
     <div class="row">
