--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -123,9 +123,7 @@
     </div>
     <footer>
       <div class="footer-container">
-        <div class="footer-logo">
-          <img src="../../../back/imagens/LYJEK.png" alt="Logo do site" />
-        </div>
+
         <div class="footer-links">
           <ul class="ul-footer">
             <li><a href="../paginas/index.php">Página Inicial</a></li>
@@ -134,39 +132,24 @@
             <li><a href="../paginas/hindu.html">Mitologia Hindu</a></li>
             <li><a href="../paginas/irlandesa.html">Mitologia Irlandesa</a></li>
             <li><a href="../paginas/japonesa.html">Mitologia Japonesa</a></li>
-            <li>
-              <a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a>
-            </li>
+            <li><a href="../paginas/mesopotamica.html">Mitologia Mesopotâmica</a></li>
             <li><a href="../paginas/nordica.html">Mitologia Nórdica</a></li>
             <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
           </ul>
         </div>
-        <div class="footer-social">
-          <ul class="ul-footer">
-            <li>
-              <a href="https://github.com/spricigom"><i>Emili</i></a>
-            </li>
-            <li>
-              <a href="https://github.com/Joaovictor23t4"><i>João</i></a>
-            </li>
-            <li>
-              <a href="https://github.com/kauabarros-24"><i>Kauã</i></a>
-            </li>
-            <li>
-              <a href="https://github.com/dnzLucas"><i>Lucas</i></a>
-            </li>
-            <li>
-              <a href="https://github.com/LuizEduardoCR"><i>Luiz Eduardo</i></a>
-            </li>
-            <li>
-              <a href="https://github.com/LuizBlume"><i>Luiz Fernando</i></a>
-            </li>
-            <li>
-              <a href="https://github.com/YohanaJahn"><i>Yohana</i></a>
-            </li>
-          </ul>
-        </div>
+
       </div>
+      <div class="footer-sociais" >
+        <img src="../../../back/imagens/LYJEK(1).png" alt="">
+        <div>
+          <a href="#">Política de privacidade</a>
+          <a href="../paginas/footer/contato.html">Contato</a>
+          <a href="#">Sobre</a>
+        </div>
+        <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
+
+      </div>
+
       <div class="footer-bottom">
         <p>&copy; 2023 LYJEK/mitologias - Todos os direitos reservados.</p>
       </div>
