--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -90,21 +90,18 @@
             <section id="secao-pergunta-2" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 2:</h1>
-                    <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
-                        nórdico?</p>
-                    <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
-                        nórdico?</p>
+                    <p class="pergunta">Qual dos seguintes deuses nórdicos é conhecido como o deus da trapaça e da travessura na mitologia nórdica</p>
                     <p class="dificuldade">Nível Fácil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label> A - Fenrir</label>
+                    <label> A - Odin</label>
                     <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Sleipnir</label>
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                    <label>C - Jormungandr</label>
+                    <label> B - Thor</label>
                     <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo">
-                    <label>D - Skoll</label>
+                    <label>C - Loki</label>
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
+                    <label>D - Freyja</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta2">
                     </div>
