--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css-quiz/animations-css/nordica.css">
+    <link rel="stylesheet" href="css-quiz/animations-css/egipcia.css">
     <script src="js/animacoes.js" defer></script>
     <script src="js/Kauã.js" defer></script>
     <title>Quiz Nórdica</title>
@@ -54,14 +54,14 @@
         <section id="secao-pergunta-1" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 1:</h1>
-                <p class="pergunta">Quem é o deus do trovão na mitologia nórdica?</p>
+                <p class="pergunta">Quem é o deus do sol na mitologia egípcia?</p>
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
-                <input type="radio" name="questao1" id="" value="errado"><label>A - Odin</label>
-                <input type="radio" name="questao1" id="" value="errado"><label> B - Loki</label>
-                <input type="radio" name="questao1" id="" value="certo"><label> C - Thor</label>
-                <input type="radio" name="questao1" id="" value="errado"><label>D - Freyja</label>
+                <input type="radio" name="questao1" id="" value="errado"><label>A - Anúbis</label>
+                <input type="radio" name="questao1" id="" value="errado"><label>B - Osíris</label>
+                <input type="radio" name="questao1" id="" value="certo"><label>C - Rá</label>
+                <input type="radio" name="questao1" id="" value="errado"><label>D - Hórus</label>
                 <div class="buttonResponder"><input type="button" value="Responder" id="btnPergunta1"></div>
             </div>
         </section>
@@ -95,20 +95,19 @@
         <section id="secao-pergunta-2" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 2:</h1>
-                <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
-                    nórdico?</p>
+                <p class="pergunta">Qual é o nome da rainha lendária do Egito que se casou com Marco Antônio e Júlio César?</p>
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
 
                 <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                <label> A - Fenrir</label>
+                <label>A - Nefertiti</label>
                 <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                <label> B - Sleipnir</label>
+                <label>B - Cleópatra</label>
                 <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
-                <label>C - Jormungandr</label>
+                <label>C - Hatshepsut</label>
                 <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo">
-                <label>D - Skoll</label>
+                <label>D - Ísis</label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta2">
                 </div>
@@ -117,7 +116,7 @@
         <section id="secao-pergunta-3" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 3</h1>
-                <p class="pergunta">Qual é a morada dos deuses na mitologia nórdica?</p>
+                <p class="pergunta">Qual é o animal sagrado associado a Thoth, o deus da sabedoria, na mitologia egípcia?</p>
                 <p class="dificuldade">Nível fácil</p>
             </div>
             <div class="alternativas">
