arrumei animtation home

--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -30,7 +30,7 @@
                 <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
             </ul>
         </li>
-        <li id="link-quiz"><a href="../quiz/japonesa.html">QUIZ JAPONESA</a></li>
+        <li id="link-quiz"><a href="../quiz/irlandesa.html">QUIZ IRLANDESA</a></li>
     </ul>
     </nav>
   </header>
