--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -35,7 +35,7 @@
                   <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
               </ul>
           </li>
-          <li id="link-quiz"><a href="../quiz/romana.html">QUIZ ROMANA</a></li>
+          <li id="link-quiz"><a href="../quiz/nordica.html">QUIZ NORDICA</a></li>
       </ul>
     </nav>
     </header>
