--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -47,7 +47,7 @@
       <h1 class="h1-texto">Mitologia Hindu</h1>
       <p>Está fundada nos Vedas, que são os livros sagrados dos hindus. Segundo a crença, o próprio Brahma os escreveu.
         Brahma é o Deus supremo da tríade hindu. Seus atributos são representados pelos três poderes: criação,
-        conservação e destruição, que formam a Trimuri ou trindade dos principais deuses: Brahma, Vishnu e Shiva,
+        conservação e destruição, que formam a Trimurti  ou trindade dos principais deuses: Brahma, Vishnu e Shiva,
         respectivamente, da criação, da conservação e da destruição.</p>
 
       <p>Brahma é o deus criador de todo o universo e de todas as divindades individuais e por ele, todas serão
@@ -243,6 +243,21 @@
         tinha força para vencer as batalhas mais profundas e obscuras, como a Guerra de Lanka – uma batalha contra o
         império do demônio. Além disso, ele demonstrava possuir muita sabedoria e domínio de seus instintos, é assim que
         conseguia sempre se superar e vencer seus inimigos.</p>
+      <h2>Principais Deuses </h2>
+      <ul>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+        <li><strong></strong></li>
+      </ul>
         <div class="botao">
           <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
         </div>
