--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -69,6 +69,23 @@
             <h3>A epopeia – parte 3: Gilgamesh busca a imortalidade</h3>
             <p>Tomado de pânico ao pensar que também um dia morreria, ele sai à procura de Utnapishtim, o único homem que foi poupado pelo dilúvio e que vivia nos confins do mundo gozando do dom da imortalidade. O rei quer saber como poderia, também, alcançar a imortalidade. Depois de uma longa jornada, cheia de perigos e provações, Gilgamesh chega até Utnapishtim. Este lhe conta como foi o dilúvio e tenta convencer o rei que sua busca é irrealizável. Gilgamesh insiste mas Utnapishtim não cede. Contudo, a mulher de Utnapishtim, compadecida com o fracasso do herói, revela-lhe o segredo da imortalidade: no fundo do mar, havia uma planta maravilhosa e quem a comesse seria eternamente jovem. O herói amarra pedras nos pés, mergulha no mar profundo e encontra a planta mágica. Fere as mãos para arrancá-la, mas consegue traze-la à superfície. Mas não a come, decide dividi-la com os anciãos de Uruk. Percorre, então o caminho de volta. Cansado, adormece. Uma serpente sente o cheiro da flor e se apossa dela, e logo muda de pele e rejuvenesce. Gilgamesh descobre que falhou e volta decepcionado para Uruk onde volta a admirar suas muralhas e construções. O poema termina com a morte de Gilgamesh:</p>
             <p><q>O destino decretado por Enlil da montanha, o pai dos deuses foi cumprido. (…) Os heróis e os sábios, como a lua nova, têm seus períodos de ascensão e declínio. Foi-te dado um trono, reinar era teu destino; a vida eterna não era o teu destino. Assim não fiques triste, não te atormentes. Ele te concedeu supremacia sobre o povo, vitória nas batalhas (…). Mas não abuses deste poder; procede com justiça com teus servos no palácio, faze justiça ante a face do Sol. OLIVEIRA (trad.): 2001.</q></p>
+            <h2>Influência</h2>
+            <ul>
+              <li><strong>Religião e Politeísmo:</strong> A mitologia mesopotâmica era parte integrante da religião politeísta das civilizações mesopotâmicas, como a Suméria, Acádia, Babilônia e Assíria. Deuses e deusas mesopotâmicos, como Enlil, Marduk, Inanna e Ishtar, desempenharam papéis centrais na adoração, nos rituais religiosos e na cosmologia dessas sociedades.
+              </li>
+              <li><strong>Literatura Épica:</strong> A mitologia mesopotâmica é conhecida por suas epopeias e histórias épicas, como a "Epopeia de Gilgamesh", que é uma das obras literárias mais antigas do mundo. Essas narrativas oferecem insights sobre a moral, a condição humana e questões existenciais.
+              </li>
+              <li><strong>Arte e Iconografia:</strong> Elementos da mitologia mesopotâmica eram frequentemente retratados em esculturas, pinturas e relevos, que decoravam templos e monumentos. Essas representações artísticas ajudaram a preservar as histórias mitológicas e a cultura mesopotâmica.
+              </li>
+              <li><strong>Código de Hamurábi:</strong> Embora não seja uma narrativa mitológica em si, o Código de Hamurábi, um antigo conjunto de leis mesopotâmicas, reflete aspectos da moral e da ética que estavam profundamente enraizados na mitologia e na religião da época.
+              </li>
+              <li><strong>Astrologia e Astronomia:</strong> A mitologia mesopotâmica influenciou a astronomia e a astrologia. Muitos corpos celestes, como planetas e estrelas, foram associados a deidades e tinham significados mitológicos
+              </li>
+              <li><strong>Sistemas de Crenças Posteriores:</strong> Muitos elementos da mitologia mesopotâmica foram absorvidos por culturas sucessivas, como a persa, grega e romana. Por exemplo, deuses mesopotâmicos como Marduk e Ishtar foram assimilados e reinterpretados em outras mitologias.</li>
+              <li><strong>Estudos e Pesquisas:</strong> A mitologia mesopotâmica é objeto de estudos acadêmicos e arqueológicos contínuos. Arqueólogos, historiadores e estudiosos continuam a investigar a cultura e a religião mesopotâmica para ganhar insights sobre a antiguidade e sua influência em culturas subsequentes.
+              </li>
+              <p>Em resumo, a mitologia mesopotâmica teve um impacto significativo na religião, na literatura, na arte e na cultura da antiguidade. Suas histórias e deuses ainda são objetos de interesse acadêmico e cultural, fornecendo uma janela para as crenças e valores das civilizações mesopotâmicas e suas influências nas sociedades posteriores.</p>
+            </ul>
             <div class="botao">
               <a href="../quiz/mesopotamica.html"
                 ><input type="button" value="COMEÇAR" id="btnComecar"
