--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -323,6 +323,24 @@
           inconsciente com a ajuda de Thor e costuraram sua boca com um pedaço
           de couro.
         </p>
+        <h2>Influência</h2>
+        <ul>
+          <li><strong>Literatura e Narrativas Épicas:</strong> A mitologia nórdica é a base de muitas das sagas e poesias épicas da Escandinávia, incluindo as "Eddas" e as "Sagas Islandesas". Essas narrativas têm sido uma fonte importante de inspiração para a literatura escandinava e também para autores e poetas em todo o mundo.
+          </li>
+          <li><strong>Cultura e Tradições:</strong></li>
+          <li><strong></strong>Elementos da mitologia nórdica são incorporados em várias tradições e celebrações em países nórdicos, como a Islândia, Noruega, Suécia e Dinamarca. Festivais como o "Midsommar" e o "Yule" têm conexões com a mitologia.
+          </li>
+          <li><strong>Nomenclatura e Toponímia: </strong>Muitos nomes de lugares, rios e montanhas na Escandinávia têm origens na mitologia nórdica. Além disso, muitos nomes pessoais ainda são usados hoje e são inspirados em deuses e heróis nórdicos.
+          </li>
+          <li><strong>Arte e Design:</strong>A mitologia nórdica é frequentemente representada em pinturas, esculturas e design, com imagens de deuses como Odin, Thor e Loki sendo elementos populares na arte escandinava.
+          </li>
+          <li><strong>Literatura e Mídia Contemporânea: </strong>A mitologia nórdica continua a inspirar a literatura contemporânea, filmes, séries de TV, jogos de vídeo e outras formas de mídia. Personagens e histórias da mitologia frequentemente são reimaginados e adaptados.
+          </li>
+          <li><strong>Filosofia e Pensamento:</strong>Elementos da mitologia nórdica, como o conceito de Valhalla e a busca por sabedoria, têm tido um impacto na filosofia e no pensamento nórdico.
+          </li>
+        </ul>
+        <p>Em resumo, a mitologia nórdica desempenhou e ainda desempenha um papel fundamental na cultura, literatura e identidade dos povos nórdicos, bem como em regiões e culturas que têm sido influenciadas por essa rica tradição. Suas histórias de deuses, heróis e o destino cósmico continuam a ressoar em muitos aspectos da vida moderna.
+        </p>
         <h3>
           Após ter estudado a mitologia nórdica, gostaria de iniciar o quiz?
         </h3>
